--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <footer id="contact">
         <h2 class="title">Contato</h2>
         <div>
-            <a href="https://www.instagram.com/?utm_source=pwa_homescreen&__pwa=1" title="Instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+            <a href="#" target="_blank"><i class="bi bi-instagram"></i></a>
             <a href="https://www.linkedin.com/in/marcos-diego-de-oliveira-da-silva" title="Linkdin" target="_blank"><i class="bi bi-linkedin"></i></a>
             <a href="https://github.com/marcos01-c" title="Github" target="_blank"><i class="bi bi-github"></i></a>
         </div>
